--- a/.github/workflows/bdd.yml
+++ b/.github/workflows/bdd.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           npm install -g allure-commandline --save-dev  # Instalar Allure Commandline
 
+
       - name: List project files for debugging
         run: |
           cd proyecto/Tests_BDD
@@ -51,14 +52,11 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Ignore Allure report files from Git tracking
+       # Guardar los cambios locales antes del checkout
+      - name: Commit local changes
         run: |
-          echo "proyecto/Tests_BDD/allure-report/" >> .gitignore  # Añadir allure-report a .gitignore
-
-      - name: Commit .gitignore update
-        run: |
-          git add .gitignore  # Agregar .gitignore modificado
-          git commit -m "Add allure-report directory to .gitignore" || echo "No changes to commit"
+          git add .  # Agrega los cambios
+          git commit -m "Saving analysis reports" || echo "No changes to commit"  # Confirmar los cambios si los hay
 
       - name: Deploy Allure report to GitHub Pages
         run: |
