--- a/.github/workflows/bdd.yml
+++ b/.github/workflows/bdd.yml
@@ -31,7 +31,6 @@ jobs:
         run: |
           npm install -g allure-commandline --save-dev  # Instalar Allure Commandline
 
-
       - name: List project files for debugging
         run: |
           cd proyecto/Tests_BDD
@@ -47,22 +46,27 @@ jobs:
           cd proyecto/Tests_BDD
           allure generate allure-results --clean -o allure-report
 
+      - name: Create Reports folder
+        run: |
+          mkdir -p proyecto/Reportes  # Crear el directorio si no existe
+          mv proyecto/Tests_BDD/allure-report/ proyecto/Reportes/  # Mover el reporte HTML generado
+
       - name: Set up Git for deployment
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-       # Guardar los cambios locales antes del checkout
+      # Guardar los cambios locales antes del checkout
       - name: Commit local changes
         run: |
           git add .  # Agrega los cambios
           git commit -m "Saving analysis reports" || echo "No changes to commit"  # Confirmar los cambios si los hay
 
-      - name: Deploy Allure report to GitHub Pages
+      - name: Deploy Reports folder to GitHub Pages
         run: |
           git fetch origin gh-pages  # Obtiene la última versión de la rama gh-pages
           git checkout gh-pages  # Cambia a la rama gh-pages
-          cp -r proyecto/Tests_BDD/allure-report/* .  # Copia el contenido del reporte generado
+          cp -r proyecto/Reportes/* .  # Copia el contenido de la carpeta Reportes
           git add .  # Agrega todos los archivos copiados
-          git commit -m "Deploy Allure report" || echo "No changes to commit"  # Manejo de caso si no hay cambios
+          git commit -m "Deploy Allure report to gh-pages" || echo "No changes to commit"  # Manejo de caso si no hay cambios
           git push origin gh-pages  # Publica los cambios en la rama gh-pages
