--- a/.github/workflows/pruebas-ui.yml
+++ b/.github/workflows/pruebas-ui.yml
@@ -23,6 +23,7 @@ jobs:
       # Instalar dependencias de Playwright
       - name: Install dependencies
         run: |
+          cd proyecto
           npm install
           npx playwright install  # Instala navegadores necesarios para Playwright
 
