--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -1,50 +1,48 @@
 name: Mutant Testing Report
 
 
+on:
+  push:
+    branches:
+      - main  # Ajusta según tu rama principal
+
 jobs:
   mutmut:
     runs-on: ubuntu-latest
     steps:
-    
-    # Checkout del repositorio
-    - name: Checkout code
-      uses: actions/checkout@v3
+      # Verificar el repositorio
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    # Configurar Python
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'  # Asegúrate de usar la versión que corresponde a tu proyecto
+      # Configurar Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'  # Cambia la versión si es necesario
 
-    # Instalar dependencias
-    - name: Install dependencies
-      run: |
-        pip install mutmut==2.0.0
-        pip install pytest  # Instalar pytest si no está en tus requerimientos
-        pip install -r proyecto/requirements.txt
+      # Instalar dependencias de Playwright
+      - name: Install dependencies
+        run: |
+          pip install -r proyecto/requirements.txt
 
+      # Mover el reporte directamente a Reportes
+      - name: Move Playwright report to Reportes
+        run: |
+          mkdir -p ../Reportes  # Crear la carpeta si no existe
+          mv proyecto/html ../Reportes/  # Mover el reporte generado
 
-    # Ejecutar pruebas mutantes
-    - name: Run mutmut
-      run: |
-        cd proyecto
-        mutmut run --paths-to-mutate classes/  # Ajusta según el directorio correcto
-        mutmut html
+      - name: Set up Git for deployment
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
-    # Configurar git para hacer commit en la rama gh-pages
-    - name: Set up Git
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "github-actions@github.com"
-
-    # Subir el reporte generado a gh-pages
-    - name: Commit and push mutated report to gh-pages
-      run: |
-        # Crear un nuevo directorio para los reportes si no existe
-        mkdir -p gh-pages/mutmut-report
-        mv mutmut_html/* gh-pages/mutmut-report/
-        
-        # Hacer commit de los cambios en gh-pages
-        git add gh-pages/mutmut-report/*
-        git commit -m "Add mutmut report"
-        git push origin gh-pages
+      # Preparar y desplegar a GitHub Pages
+      - name: Deploy Playwright report to GitHub Pages
+        run: |
+          git fetch origin gh-pages || echo "No previous gh-pages branch"
+          git checkout gh-pages || git checkout -b gh-pages
+          git pull origin gh-pages || echo "No changes to pull from gh-pages"
+          cp -r ../Reportes/* .  # Copiar contenido del reporte a la raíz
+          git add .  # Agregar todos los archivos nuevos
+          git commit -m "Deploy Playwright report to gh-pages" || echo "No changes to commit"
+          git push origin gh-pages
