--- a/.github/workflows/pruebas_unitarias.yml
+++ b/.github/workflows/pruebas_unitarias.yml
@@ -30,14 +30,12 @@ jobs:
     - name: Run tests and generate HTML coverage report
       run: |
         cd proyecto  # Cambia al directorio del proyecto si es necesario
-        pytest --cov=. tests/ --cov-report=html:./htmlcov  # Genera el reporte de cobertura en HTML
+        pytest --cov=. tests/ --cov-report=html
 
     - name: Mover directorio de reporte a Reportes
       run: |
-        # Crea el directorio "Reportes" en la raíz si no existe
         mkdir -p ../Reportes
-        # Mueve el directorio htmlcov a ../Reportes/htmlcov
-        mv proyecto/htmlcov ../Reportes/htmlcov
+        mv proyecto/htmlcov ../Reportes/
 
     - name: Configurar Git para publicar en GitHub Pages
       run: |
@@ -53,17 +51,14 @@ jobs:
         git checkout gh-pages || git checkout -b gh-pages
         git pull origin gh-pages || echo "No changes to pull from gh-pages"
 
-        # Crea un directorio 'Pruebas-U' si no existe en la rama gh-pages
-        mkdir -p Pruebas-U
+        # Renombrar el directorio htmlcov a htmlcov-u y moverlo directamente a la raíz
+        mv ../Reportes/htmlcov ./htmlcov-u
 
-        # Mueve el directorio htmlcov dentro de Pruebas-U
-        cp -r ../Reportes/htmlcov ./Pruebas-U/htmlcov
-
-        # Añadir el directorio htmlcov dentro de Pruebas-U a Git
-        git add Pruebas-U/htmlcov
+        # Añadir el directorio htmlcov-u a Git
+        git add htmlcov-u
 
         # Realiza commit si hay cambios
-        git commit -m "Publicando reporte de cobertura de pruebas dentro de Pruebas-U" || echo "No hay cambios para commitear"
+        git commit -m "Publicando reporte de cobertura de pruebas" || echo "No hay cambios para commitear"
 
         # Empuja los cambios a la rama gh-pages
         git push origin gh-pages
