--- a/.github/workflows/pruebas_unitarias.yml
+++ b/.github/workflows/pruebas_unitarias.yml
@@ -30,13 +30,12 @@ jobs:
     - name: Run tests and generate HTML coverage report
       run: |
         cd proyecto  # Cambia al directorio del proyecto si es necesario
-        pytest --cov=. tests/ --cov-report=html
+        pytest --cov=. tests/ --cov-report=html:report-unit
 
     - name: Mover directorio de reporte a Reportes
       run: |
         mkdir -p ../Reportes
-        mkdir -p ../Reportes/Pruebas-Unitarias
-        mv proyecto/htmlcov ../Reportes/Pruebas-Unitarias/
+        mv proyecto/report-unit ../Reportes/
 
     - name: Configurar Git para publicar en GitHub Pages
       run: |
@@ -53,13 +52,13 @@ jobs:
         git pull origin gh-pages || echo "No changes to pull from gh-pages"
 
         # Mueve el directorio htmlcov a la raíz de la rama gh-pages
-        mv ../Reportes/Pruebas-Unitarias/htmlcov ./Pruebas-Unitarias
+        cp -r ../Reportes/* .
 
         # Añadir el directorio htmlcov a Git
-        git add Pruebas-Unitarias
+        git add .
 
         # Realiza commit si hay cambios
-        git commit -m "Publicando reporte de cobertura de pruebas" || echo "No hay cambios para commitear"
+        git commit -m "Publicando reporte de cobertura de pruebas unitarias" || echo "No hay cambios para commitear"
 
         # Empuja los cambios a la rama gh-pages
         git push origin gh-pages
