--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -1,74 +1,57 @@
 name: Mutant Testing Report
 
-
 on:
   push:
-    branches:
-      - main  # Ajusta según tu rama principal
+    branches: [ main ]
 
 jobs:
-  mutmut:
+  mutant-testing:
     runs-on: ubuntu-latest
+
     steps:
-      # Verificar el repositorio
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
-      # Configurar Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'  # Cambia la versión si es necesario
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      # Instalar dependencias de Playwright
-      - name: Install dependencies
-        run: |
-           pip install mutmut==2.0.0
-           pip install pytest
-           pip install -r proyecto/requirements.txt
+    - name: Install dependencies
+      run: |
+        pip install mutmut==2.0.0
+        pip install pytest
+        pip install -r proyecto/requirements.txt
 
-      - name: Run mutmut
-        continue-on-error: true
-        run: |
-          cd proyecto
-          mutmut run --paths-to-mutate classes/
+    - name: Run mutmut
+      continue-on-error: true
+      run: |
+        cd proyecto
+        mutmut run --paths-to-mutate classes/
 
-      - name: Reporte mutmut
-        continue-on-error: true
-        run: |
-          cd proyecto
-          mutmut html
-          mkdir -p report_mutante
-          mv index.html report_mutante/index.html  # Mueve el reporte generado a report_mutante
-      
-      - name: Move Mutmut report to Reportes
-        run: |
-          mkdir -p ../Reportes
-          mv proyecto/report_mutante ../Reportes/
-        
+    - name: Reporte mutmut
+      continue-on-error: true
+      run: |
+        cd proyecto
+        mutmut html
 
-      - name: Configurar Git para publicar en GitHub Pages
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+    - name: Mover index.html a report_mutante
+      run: |
+        mkdir -p proyecto/html/report_mutante  # Crear la carpeta 'report_mutante' si no existe
+        mv proyecto/html/index.html proyecto/html/report_mutante/  # Mover el archivo index.html
 
-      - name: Prepare gh-pages branch and deploy report
-        run: |
-          # Obtiene la última versión de la rama gh-pages
-          git fetch origin gh-pages || echo "No previous gh-pages branch"
-          
-          # Si la rama gh-pages existe, realiza un pull para obtener los cambios remotos
-          git checkout gh-pages || git checkout -b gh-pages
-          git pull origin gh-pages || echo "No changes to pull from gh-pages"
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./proyecto/html/report_mutante  
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+        commit_message: 'Update Mutant Testing Report'
 
-          # Mueve el directorio htmlcov a la raíz de la rama gh-pages
-          cp -r ../Reportes/* .
-
-          # Añadir el directorio htmlcov a Git
-          git add .
-
-          # Realiza commit si hay cambios
-          git commit -m "Publicando reporte de cobertura de pruebas mutantes" || echo "No hay cambios para commitear"
-
-          # Empuja los cambios a la rama gh-pages
-          git push origin gh-pages
+permissions:
+  contents: write
+  pages: write
+  id-token: write
