--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -54,7 +54,9 @@ jobs:
         
         # Si la rama gh-pages existe, realiza un pull para obtener los cambios remotos
         git checkout gh-pages || git checkout -b gh-pages
-        git pull origin gh-pages || echo "No changes to pull from gh-pages"
+
+        # Actualiza la rama local con los cambios remotos
+        git pull origin gh-pages --rebase || git pull origin gh-pages  # Rebase o merge según lo que prefieras
 
         # Mueve el directorio report_mutante a la raíz de la rama gh-pages
         cp -r proyecto/html/report_mutante/* .  # Copia el contenido de report_mutante al directorio raíz
