--- a/.github/workflows/bdd.yml
+++ b/.github/workflows/bdd.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main  
 
+concurrency:
+  group: "deploy-gh-pages" 
+  cancel-in-progress: true   
+
 jobs:
   generate-report:
     runs-on: ubuntu-latest  
