--- a/.github/workflows/pruebas_unitarias.yml
+++ b/.github/workflows/pruebas_unitarias.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main  # O la rama que prefieras
-  pull_request:
-    branches:
-      - main  # O la rama que prefieras
+
+concurrency:
+  group: "deploy-gh-pages" 
+  cancel-in-progress: true   
 
 jobs:
   deploy:
