--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: "deploy-gh-pages" 
+  cancel-in-progress: true   
+
 jobs:
   security:
     runs-on: ubuntu-latest
