--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+
+concurrency:
+  group: "deploy-gh-pages" 
+  cancel-in-progress: true   
 
 jobs:
   sonarcloud-analysis:
