--- a/.github/workflows/bdd.yml
+++ b/.github/workflows/bdd.yml
@@ -1,9 +1,10 @@
 name: Generate Allure Report and Deploy to GitHub Pages
 
 on:
-  push:
-    branches:
-      - main  
+  workflow_run:
+    workflows: ["CI with Snyk"]  # Nombre del primer workflow
+    types:
+      - completed
 
 concurrency:
   group: "deploy-gh-pages" 
