--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,9 +1,10 @@
 name: CI with Snyk
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Mutant Testing Report"]  # Nombre del primer workflow
+    types:
+      - completed
 
 concurrency:
   group: "deploy-gh-pages" 
