--- a/.github/workflows/pruebas_unitarias.yml
+++ b/.github/workflows/pruebas_unitarias.yml
@@ -1,9 +1,10 @@
-name: Generate and Deploy HTML Report
+name: Reporte de pruebas unitarias
 
 on:
-  push:
-    branches:
-      - main  # O la rama que prefieras
+  workflow_run:
+    workflows: ["Reporte de Mutant Testing"]  # Nombre del primer workflow
+    types:
+      - completed
 
 concurrency:
   group: "deploy-gh-pages" 
