--- a/.github/workflows/bdd.yml
+++ b/.github/workflows/bdd.yml
@@ -1,10 +1,8 @@
-name: Generate Allure Report and Deploy to GitHub Pages
+name: Reporte BDD con Allure
 
 on:
-  workflow_run:
-    workflows: ["CI with Snyk"]  # Nombre del primer workflow
-    types:
-      - completed
+  push:
+    branches: [ main ]
 
 concurrency:
   group: "deploy-gh-pages" 
