--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -1,8 +1,10 @@
-name: Mutant Testing Report
+name: Reporte de Mutant Testing
 
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["Reporte BDD con Allure"]  # Nombre del primer workflow
+    types:
+      - completed
 
 concurrency:
   group: "deploy-gh-pages" 
