--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,9 +1,10 @@
-name: Run SonarCloud Analysis and Deploy Report
+name: Reporte de Análisis con SonarCloud
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["CI with Snyk"]  
+    types:
+      - completed
 
 concurrency:
   group: "deploy-gh-pages" 
