--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,14 +1,9 @@
 name: CI with Snyk
 
 on:
-  workflow_run:
-    workflows: ["Semgrep Analysis"]  
-    types:
-      - completed
-
-concurrency:
-  group: "deploy-gh-pages" 
-  cancel-in-progress: true   
+  push:
+    branches:
+      - main
 
 jobs:
   snyk-analysis:
