Correccion workflow mamut

--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -1,9 +1,8 @@
-name: Reporte de Mutant Testing
+name: Mutant Testing Report
 
 on:
   push:
-    branches:
-      - main  
+    branches: [ main ]
 
 jobs:
   mutant-testing:
@@ -38,34 +37,17 @@ jobs:
         cd proyecto
         mutmut html
 
-    - name: Mover index.html a report_mutante
-      run: |
-        mkdir -p proyecto/html/report_mutante  # Crear la carpeta 'report_mutante' si no existe
-        mv proyecto/html/index.html proyecto/html/report_mutante/  # Mover el archivo index.html
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./proyecto/html
+        destination_dir: reporte-mutantes
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+        commit_message: 'Update Mutant Testing Report'
 
-    - name: Configurar Git para publicar en GitHub Pages
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-    - name: Prepare gh-pages branch and deploy report
-      run: |
-        # Obtiene la última versión de la rama gh-pages
-        git fetch origin gh-pages || echo "No previous gh-pages branch"
-        
-        # Si la rama gh-pages existe, realiza un pull para obtener los cambios remotos
-        git checkout gh-pages || git checkout -b gh-pages
-        git pull origin gh-pages --rebase || echo "No changes to pull from gh-pages"  # Se usa --rebase para evitar conflictos
-    
-        # Mueve el directorio report_mutante a la raíz de la rama gh-pages
-        cp -r proyecto/html/report_mutante/* .
-        
-        # Añadir los archivos al repositorio
-        git add .
-    
-        # Realiza commit si hay cambios
-        git commit -m "Publicando reporte de Mutant Testing" || echo "No hay cambios para commitear"
-    
-        # Empuja los cambios a la rama gh-pages
-        git push origin gh-pages || echo "Error al hacer push"
-    
+permissions:
+  contents: write
+  pages: write
+  id-token: write
