--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -29,7 +29,7 @@ jobs:
       continue-on-error: true
       run: |
         cd proyecto
-        mutmut run --paths-to-mutate classes/
+        mutmut run --paths-to-mutate tests/
 
     - name: Reporte mutmut
       continue-on-error: true
